# siteplan

./: .gitignore  LICENSE.txt  Makefile  README.md  bun.lockb  package.json  pyproject.toml  tailwind.config.js  test_run.py  webpack.mix.js
src/siteplan/: __init__.py  app.py  cli.py  models.py  server.py  settings.py  urls.py
src/siteplan/fe/js/: lib.js
src/siteplan/migrations/: 0001_initial.py
src/siteplan/myapp_templates/: package.json  tailwind.config.js  webpack.mix.js
src/siteplan/myapp_templates/myapp/: models.py  settings.py  urls.py  views.py
src/siteplan/static/siteplan/css/: app.css
src/siteplan/static/siteplan/js/: lib.js  main.js
src/siteplan/templates/siteplan/: base.html  home_page.html
templates/siteplan/: base.html  home_page.html
